spec/e2e/string/unterminated.lit
# error: [line 3] Syntax error: Unterminated string.
"this string has no close quote
